--- a/server/package.json
+++ b/server/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf dist && npx tsc",
-    "start": "npm run build && node dist/index.js",
-    "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/index.ts\"",
-    "seed": "ts-node prisma/seed.ts",
-    "prisma:generate": "prisma generate",
-    "postprisma:generate": "shx cp -r node_modules/.prisma/client/index.d.ts ../client/src/types/prismaTypes.d.ts"
-  },
+  "build": "rimraf dist && npx tsc",
+  "start": "npm run build && node dist/index.js",
+  "dev": "nodemon --exec ts-node src/index.ts",
+  "seed": "ts-node prisma/seed.ts",
+  "prisma:generate": "prisma generate",
+  "postprisma:generate": "shx cp -r node_modules/.prisma/client/index.d.ts ../client/src/types/prismaTypes.d.ts",
+  "postinstall": "prisma generate"
+}
+,
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,7 +19,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.740.0",
     "@aws-sdk/lib-storage": "^3.740.0",
-    "@prisma/client": "^6.3.0",
+    "@prisma/client": "^6.10.1",
     "@terraformer/wkt": "^2.2.1",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
